# cbor-mediawiki-dump

./: .gitignore  Cargo.toml  README.md
src/: element.rs  lib.rs  main.rs  tag.rs  xml_serde.rs  xml_to_cbor.rs
