[package]
name = "cbor-mediawiki-dump"
version = "0.1.0"
authors = ["Erutuon <5840197+Erutuon@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "*" # only for bin
bincode = "1.3.3"
bzip2 = "0.4.1"
chrono = { version = "0.4.19", default-features = false, features = ["serde", "alloc"] }
either = "1.6.1"
memchr = "2.4"
pico-args = "0.4" # only for bin
quick-xml = { version = "0.22.0", features = ["serialize"] }
rmp-serde = "0.15.5"
rust-lzma = "0.5"
serde = { version = "1.0.116", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.64"
thiserror = "1.0.21"
